# PCS_2026

./: .gitattributes  .gitignore
cavallo/: CMakeLists.txt  ChessBoard.hpp  main.cpp  vectors_fun.hpp
depina/: CMakeLists.txt  cycles.h  functions.h  main.cpp  search_graph.h  undirected_graph.h  undirected_tree.h
esercitazione1/: CMakeLists.txt  media.cpp  print.cpp
esercitazione10/: CMakeLists.txt  gradiente.h  main.cpp  test_gradiente.cpp
esercitazione2/: CMakeLists.txt  es1.cpp  es1.md  es2.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.cpp  rational.h  tests.cpp  vec2.cpp
esercitazione4/: CMakeLists.txt  README.md  main.cpp  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_selectionsort.cpp  timecounter.cpp
esercitazione5/: CMakeLists.txt  README.md  main.cpp  measure_sorts.cpp  sorts.hpp  test_mergesort.cpp  test_quicksort.cpp
esercitazione8/: CMakeLists.txt  dispenser.h  main.cpp  queue.h  search_graph.h  stack.h  test_graph.cpp  undirected_edge.h  undirected_graph.h  undirected_tree.h
esercitazione9/: CMakeLists.txt  dispenser.h  main.cpp  search_graph.h  test_graph.cpp  undirected_edge.h  undirected_graph.h  undirected_tree.h  weighed_edge.h  weighed_graph.h
grad_desc/: CMakeLists.txt  main.cpp
progetto_finale/: CMakeLists.txt  README.md  cycles.h  dfs_project.h  dispenser.h  edge.h  fifo.h  functions.h  gradiente.h  graph.h  input.hpp  lifo.h  main.cpp  matrices.h  pseudocodice_output.h  search_graph.h  test_cycles.cpp  test_de_pina.cpp  test_dfs_project.cpp  test_functions.cpp  test_funzione_output.cpp  test_matrices.cpp  test_search_graph.cpp  testinput2.txt  testinputPIS.txt  testinputstring.txt  tree.h  weighed_edge.h  weighed_graph.h
progetto_finale/tests/: test_cycles.cpp  test_de_pina.cpp  test_dfs_project.cpp  test_functions.cpp  test_funzione_output.cpp  test_input.cpp  test_matrices.cpp  test_search_graph.cpp
